layout issue

--- a/www/css/mayo.css
+++ b/www/css/mayo.css
@@ -1,11 +1,13 @@
-#mayo{ cursor:pointer;   	line-height:40px;}
+#mayo{
+	 cursor:pointer; 
+	line-height:40px;
+	height:300px;
+	}
 h1{color:#663233;}
 .content {width:600px;margin:0 auto;}
 body{
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	font-size:200%;
-
-	
 }
-.social.content{margin-top:30px;}
+.social.content{margin-top:30px; line-height:20px;}
 .social p{margin:0;margin-bottom:10px;}
